# hcwnd

./: .dockerignore  Cargo.toml  Dockerfile  bacon.toml  docker-compose.yml  package.json  start.sh
assets/: animation.scss  breakpoints.scss  classes.scss  colours.scss  semantic.scss  style.scss  stylebu.scss
crates/api/: Cargo.toml
crates/api/src/: act.rs  artist.rs  day.rs  event.rs  lib.rs  routes.rs  stage.rs  user.rs
crates/imgproxy/: Cargo.toml
crates/imgproxy/src/: error.rs  lib.rs
crates/server/: .env  Cargo.toml  bacon.toml  build.rs  cookie_secret  start.sh
crates/server/migrations/: 20260307071611_init.sql
crates/server/src/: error.rs  event_req_cache.rs  main_old.rs
crates/server/src/controller/: act.rs  day.rs  event.rs  mod.rs  stage.rs
crates/server/src/event/: event_page.rs  mod.rs
crates/server/src/event/timetable/: add.rs  mod.rs
crates/server/src/lib/: config.rs  domain.rs  outbound.rs
crates/server/src/lib/domain/: proposal.rs
crates/server/src/lib/domain/artist/: ports.rs  service.rs
crates/server/src/lib/domain/artist/models/: artist.rs
crates/server/src/lib/domain/event/: models.rs  ports.rs  service.rs
crates/server/src/lib/domain/event/models/: act.rs  day.rs  event.rs  stage.rs
crates/server/src/lib/domain/user/: ports.rs  service.rs
crates/server/src/lib/domain/user/models/: user.rs
crates/server/src/lib/inbound/: http.rs
crates/server/src/lib/inbound/http/: actix_macro.rs  event.rs  handlers.rs  mapper.rs  user.rs
crates/server/src/lib/inbound/http/handlers/: artist.rs  assets.rs  create_event.rs  event.rs  login.rs  logout.rs  signup.rs
crates/server/src/lib/inbound/http/handlers/create_event/: confirm_step.rs  days_step.rs  details_step.rs  name_step.rs  stages_step.rs
crates/server/src/lib/inbound/http/handlers/event/: details.rs
crates/server/src/lib/inbound/http/handlers/event/details/: act.rs  lineup.rs
crates/server/src/lib/inbound/http/handlers/event/details/act/: artist.rs
crates/server/src/lib/inbound/http/handlers/event/resource/: act.rs  lineup.rs  timetable.rs
crates/server/src/lib/inbound/http/mapper/: act.rs  event.rs
crates/server/src/lib/outbound/: pg.rs
crates/server/src/lib/outbound/entity/: act.rs  artist.rs  day.rs  event.rs  mod.rs  stage.rs  user.rs
crates/server/src/model/: act.rs  event.rs  mod.rs  stage.rs  user.rs
crates/server/src/service/: act.rs  event.rs  mod.rs  timetable.rs
crates/server/src/user/: guard.rs  mod.rs  sign_in.rs  sign_up.rs  validator.rs
crates/ui/: Cargo.toml  i18n.toml
crates/ui/locales/: app.yml
crates/ui/src/: artist.rs  data_protection.rs  index.rs  lib.rs  user.rs  util.rs  view.rs
crates/ui/src/act/: card.rs  create.rs  mod.rs
crates/ui/src/component/: bottom_card.rs  icon.rs  menu.rs  mod.rs
crates/ui/src/event/: card.rs  create.rs  details.rs  lineup.rs  list.rs  mod.rs
crates/ui/src/event/create/: confirm_step.rs  days_step.rs  details_step.rs  name_step.rs  stage_step.rs
crates/ui/src/event/timetable/: add.rs  mod.rs  timetable.rs
crates/ui/src/user/: sign_in.rs  sign_up.rs
crates/ui/src/view/: event.rs
crates/ui/src/view/artist/: create.rs  list.rs
crates/ui/src/view/artist/create/: name_step.rs
crates/ui/src/view/event/: detail.rs  lineup.rs  timetable.rs
