[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"
authors = ["Xenira"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Xenira/hardcore-will-never-diy"
website = "https://hardcore-will-never.diy"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
derive_builder = "0.20.2"
indexmap = "2.13.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.0", features = ["v4"] }
url = { version = "2.5.8", features = ["serde"] }
thiserror = "2.0.18"
rust-i18n = "4.1.0"

# workspace
api = { path = "crates/api" }
ui = { path = "crates/ui" }
imgproxy = { path = "crates/imgproxy" }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.debugging]
inherits = "dev"
debug = true
