[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "hcwnd"
path = "src/lib/lib.rs"

[[bin]]
name = "hcwnd_server"
path = "src/bin/server.rs"

[dependencies]
actix-files = "0.6.10"
actix-htmx = "0.4.1"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["redis-pool", "redis-session"] }
actix-utils = "3.0.1"
actix-web = "4.13.0"
actix-web-helmet = "1.0.0"
api = { path = "../api" }
chrono = { workspace = true }
deadpool-redis = "0.22.1"
derive_builder = { workspace = true }
env_logger = "0.11.10"
es-entity = { version = "0.10.32" }
futures = "0.3.32"
imgproxy = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
log = "0.4.29"
nutype = { version = "0.6.2", features = ["regex"] }
serde = { workspace = true }
serde_with = "3.18.0"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "migrate", "uuid", "chrono", "runtime-tokio" ] }
thiserror = { workspace = true }
tracing-actix-web = "0.7.21"
ui = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
anyhow = "1.0.102"
actix-web-lab = "0.26.0"
secrecy = "0.10.3"
argon2 = "0.5.3"
rust-embed = { version = "8.11.0", features = ["actix-web", "deterministic-timestamps", "include-exclude"] }
mime_guess = "2.0.5"
serde_qs = { version = "1.1.2", features = ["actix4"] }
regex = "1.12.4"

[build-dependencies]
grass = "0.13.4"

[package.metadata.cargo-machete]
ignored = ["regex", "grass"]
