[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
website.workspace = true

[dependencies]
maud = "0.27.0"
uuid = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
serde_with = "3.21.0"
